hphp/hack/test/typecheck/parse_error_loc_else.php.exp
File "parse_error_loc_else.php", line 22, characters 9-17:
literal is not allowed in write context (Parsing[1002])
